<resources>
    <string name="app_name">AndroidDagger</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="auth_logo">This is a sample logo.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
